src/style.css
*,*::before,*::after {
  box-sizing: border-box;
}

body {
  font: 16px/24px "Segoe UI", sans-serif;
  margin: 0;
}

a {
  color: #41b883;
  text-decoration: none;
}

#app {
  padding-top: 60px;
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

.main {
  flex: 1;
  padding: 15px 0;
}

.container {
  width: 100%;
  max-width: 900px;
  margin: 0 auto;
  padding-left: 15px;
  padding-right: 15px;
  min-width: 360px;
}

.navbar {
  background: rgba(255,255,255,.75);
  height: 60px;
  display: flex;
  align-items: center;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 100;
  box-shadow: 0 0 16px 0 rgba(0,0,0,.15);
  backdrop-filter: blur(8px);
}

.site-footer {
  box-shadow: 0 0 16px 0 rgba(0,0,0,.15);
  height: 60px;
  display: flex;
  align-items: center;
  text-align: center;
}

.navbar__container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.navbar-brand {
  display: flex;
  align-items: center;
  gap: 7px;
  text-decoration: none;
  font-weight: bold;
  text-transform: uppercase;
  font-size: 18px;
  color: #41b883;
}

.navbar-menu {
  display: flex;
  gap: 24px;
}

.navbar-menu__item {
  text-decoration: none;
  color: #35495e;
}

.navbar-menu__item.active {
  color: #41b883;
}

.product-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 15px;
}

.product-item {
  display: flex;
  flex-direction: column;
  box-shadow: 0 0 4px 0 rgba(0,0,0,.15);
  padding: 10px;
  border-radius: 4px;
  transition: .15s ease;
}

.product-item:hover {
  box-shadow: 0 0 16px 0 rgba(0,0,0,.15);
}

.product-item.active {
  box-shadow: 0 0 16px 0 rgba(65,184,131,.75);
}

.product-item__img {
  width: 100%;
}

.product-item__footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.product-item__price {
  color: #41b883;
  font-weight: bold;
  font-size: 18px;
}

a.navbar-cart {
  display: flex;
  gap: 3px;
  align-items: center;
  text-decoration: none;
  color: black;
}

.product-item__name {
  flex: 1;
}

.category-section {
  margin-bottom: 15px;
}

.category-section__title {
  margin: 0;
  margin-bottom: 15px;
}

.checkout-grid {
  display: flex;
  flex-direction: column;
  gap: 3px;
}

.checkout-item {
  display: flex;
  align-items: center;
  gap: 15px;
  box-shadow: 0 0 4px 0 rgba(0,0,0,.15);
  border-radius: 4px;
  padding: 3px;
}

.checkout-item__img {
  width: 64px;
}

.checkout-item__title {
  flex: 1;
}

.checkout-item__controls {
  padding-right: 15px;
  display: flex;
  gap: 3px;
}

.product-item__controls {
  display: flex;
  gap: 7px;
}

@media (max-width: 767px) {
  .navbar-brand__name {
    display: none;
  }

  .product-grid {
    grid-template-columns: repeat(2, 1fr);
  }

  .product-item__name {
    font-size: 16px;
  }

  .navbar-menu {
    font-size: 14px;
  }

  .product-item__name {
    font-size: 13px;
  }

  .checkout-grid {
    gap: 7px;
  }

  .checkout-item {
    flex-direction: column;
    padding: 15px;
  }

  .checkout-item__controls {
    gap: 7px;
  }
}

